--- a/style.css
+++ b/style.css
@@ -15,11 +15,55 @@
 */
 
 
+/************************************************/
+/***********     Declaration Order      *********/
+/***********************************************/
+
+/*
+
+.declaration-order {
+  /* Positioning */
+  position: absolute;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0;
+  z-index: 100;
+
+  /* Box-model */
+  display: block;
+  float: right;
+  width: 100px;
+  height: 100px;
+
+  /* Typography */
+  font: normal 13px "Helvetica Neue", sans-serif;
+  line-height: 1;
+  color: #333;
+  text-align: center;
+
+  /* Visual */
+  background-color: #f5f5f5;
+  border: 1px solid #e5e5e5;
+  border-radius: 3px;
+
+  /* Misc */
+  opacity: 1;
+}
+
+*/*/
+
 
 /************************************************/
 /*************     INITIALIZE      **************/
 /***********************************************/
 a {
+  color: red;
+}
+
+a:hover {
+  color: #FDEB2A;
+  text-decoration: none;
 }
 
 body {
@@ -35,31 +79,40 @@ body {
 }
 
 h1, h3, h4, h5, h6 {
-  text-align: center;
+ font-weight: bold;
+ text-align: center;
 }
 
-h1, h2 {
-}
-
-h3, h4, h5, h6, nav ul li a {
+h1, h2 h3, h4, h5, h6, nav ul li a {
+  color: red;
 }
 
 p {
 }
 
-.yellow {
+.bold {
+  font-weight: bold;
 }
 
+.italic {
+  font-style: italic;
+}
 
+.red {
+  color: red;
+}
 
 /************************************************/
 /*************     HEADER      ****************/
 /***********************************************/
 
 header {
+  position: fixed;
+  margin-top: 0px;
   color: white;
   text-align: center;
   background-color: rgba(10,10,10,1);
+  z-index: 2;
 }
 
 header h1 {
@@ -71,18 +124,32 @@ header h1 {
   height: 50px;
 } */
 
-header a {
-  color:red;
+/* header a {
+  color: red;
 }
 
 header a:hover{
-  color: #FDEB2A; /* color: #FFE900; */
+  color: #FDEB2A;
   text-decoration: none;
 }
+*/
 
-h1 span {
+.bep-title {
   font-weight: bold;
   color: red;
+}
+
+.bep-title:hover {
+  color: #FDEB2A;
+}
+
+.lab-title {
+  font-style: italic;
+  font-family: Times serif;
+}
+
+.yellow{
+  color: #FDEB2A;
 }
 
 .right {
@@ -93,40 +160,45 @@ h1 span {
   display: inline-block;
 }
 
+#logo{
+  width: 200px;
+}
+
+#title {
+  display: inline-block;
+}
+#main-header {
+  width: 100%;
+}
+
 .navbar-default {
   background-color: transparent;
-/* border-color: #e7e7e7; */
+  border-color: transparent;
 }
 
 .container>.navbar-header, .container-fluid>.navbar-header, .container>.navbar-collapse, .container-fluid>.navbar-collapse {
   display: inline-block!important;
 }
 
+/***** Navbar *****/
+/* Lien actif de la Navbar */
 .navbar-default .navbar-nav>.active>a, .navbar-default .navbar-nav>.active>a:hover, .navbar-default .navbar-nav>.active>a:focus {
   font-weight: bold;
   color: #FDEB2A;
   background-color: transparent;
 }
 
+.navbar-default .navbar-collapse, .navbar-default .navbar-form {
+  border-color: transparent;
+}
+
+/* Liens non-actifs de la Navbar */
 .navbar-default .navbar-nav>li>a {
   color: red;
 }
 
+/* Hover Lien de la Navbar */
 .navbar-default .navbar-nav>li>a:hover, .navbar-default .navbar-nav>li>a:focus {
-  color: #FDEB2A;
-}
-
-#logo{
-  width: 50px;
-}
-
-#bep {
-  font-weight: bold;
-  color: red;
-}
-
-#lab {
-  font-family: Times serif;
   color: #FDEB2A;
 }
 
@@ -143,10 +215,15 @@ h1 span {
   width: 450px;
   background-color: rgba(240,240,240,0.7);
   float: right;
+  padding-bottom: 30px;
 }
 
 .btn-danger {
   opacity: 3;
+}
+
+.btn-danger:hover, .btn-danger:focus, .btn-danger:active, .btn-danger.active, .open>.dropdown-toggle.btn-danger {
+  color: #FDEB2A;
 }
 
 #accueil {
@@ -154,6 +231,7 @@ h1 span {
   background-size: cover;
   background: url("http://lorempixel.com/g/1600/600/food");
   background-position: center;
+  padding-top: 200px;
 }
 
 #reserver {
@@ -175,6 +253,10 @@ i {
   font-size: 70px;
 }
 
+#contact {
+  margin-top: -2em;
+  padding-left: 5em;
+}
 /************************************************/
 /*************        ASIDE       ****************/
 /***********************************************/
