--- a/style.css
+++ b/style.css
@@ -22,7 +22,7 @@
 /*
 
 .declaration-order {
-  /* Positioning */
+  ---------- Positioning ---------
   position: absolute;
   top: 0;
   right: 0;
@@ -30,28 +30,28 @@
   left: 0;
   z-index: 100;
 
-  /* Box-model */
+  --------- Box-model ---------
   display: block;
   float: right;
   width: 100px;
   height: 100px;
 
-  /* Typography */
+  --------- Typography ---------
   font: normal 13px "Helvetica Neue", sans-serif;
   line-height: 1;
   color: #333;
   text-align: center;
 
-  /* Visual */
-  background-color: #f5f5f5;
-  border: 1px solid #e5e5e5;
+  --------- Visual ---------
+  background-color: ;
+  border: 1px solid ;
   border-radius: 3px;
 
-  /* Misc */
+  --------- Misc ---------
   opacity: 1;
 }
 
-*/*/
+*/
 
 
 /************************************************/
@@ -78,6 +78,10 @@ body {
   background-color: rgba(240,240,240, 0.8);
 }
 
+h1, h2, h3, h4, h5, h6, p {
+  line-height: 1.5;
+}
+
 h1, h3, h4, h5, h6 {
  font-weight: bold;
  text-align: center;
@@ -99,7 +103,7 @@ p {
 }
 
 .red {
-  color: red;
+  color: #EC0000;
 }
 
 /************************************************/
@@ -116,8 +120,16 @@ header {
 }
 
 header h1 {
-  margin-top: 100;
+  padding-top: 100;
+  padding-bottom: 0;
+  font-size: 16px;
   color: white;
+}
+
+@media (max-width: 768px) {
+  header h1 {
+    float: left;
+  }
 }
 
 /* header i{
@@ -126,16 +138,17 @@ header h1 {
 
 /* header a {
   color: red;
-}
+} */
 
+/*
 header a:hover{
   color: #FDEB2A;
   text-decoration: none;
-}
-*/
+} */
 
 .bep-title {
   font-weight: bold;
+  font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
   color: red;
 }
 
@@ -145,7 +158,7 @@ header a:hover{
 
 .lab-title {
   font-style: italic;
-  font-family: Times serif;
+  font-family: Times, serif;
 }
 
 .yellow{
@@ -160,15 +173,25 @@ header a:hover{
   display: inline-block;
 }
 
+#main-header {
+  width: 100%;
+}
+
 #logo{
-  width: 200px;
+  text-align: right;
+  width: 150px;
 }
 
 #title {
-  display: inline-block;
+  display: inline;
+  padding-bottom: 0;
 }
-#main-header {
-  width: 100%;
+
+@media (min-width: 768px) {
+  #rs {
+    margin-top: 3%;
+    float: right;
+  }
 }
 
 .navbar-default {
@@ -176,8 +199,10 @@ header a:hover{
   border-color: transparent;
 }
 
-.container>.navbar-header, .container-fluid>.navbar-header, .container>.navbar-collapse, .container-fluid>.navbar-collapse {
-  display: inline-block!important;
+@media (min-width: 768px) {
+  .container>.navbar-header, .container-fluid>.navbar-header, .container>.navbar-collapse, .container-fluid>.navbar-collapse {
+    display: inline-block!important;
+  }
 }
 
 /***** Navbar *****/
@@ -194,7 +219,7 @@ header a:hover{
 
 /* Liens non-actifs de la Navbar */
 .navbar-default .navbar-nav>li>a {
-  color: red;
+  color: #EC0000;
 }
 
 /* Hover Lien de la Navbar */
@@ -202,6 +227,36 @@ header a:hover{
   color: #FDEB2A;
 }
 
+
+/* 
+/* How to override the default Bootstrap navbar */
+/*
+.navbar-transparent {
+  background-color: rgba(0, 0, 0, 0.7);
+}
+
+.navbar-transparent .navbar-brand,
+.navbar-transparent .navbar-nav > li > a {
+  color: #eeeeee;
+  line-height: 50px;
+}
+
+.navbar-transparent .navbar-nav > li > a:hover,
+.navbar-transparent .navbar-nav > li > a:active,
+.navbar-transparent .navbar-nav > li > a:focus,
+.navbar-transparent .navbar-nav > .open > a,
+.navbar-transparent .navbar-nav > .open > a:hover,
+.navbar-transparent .navbar-nav > .open > a:focus {
+  color: white;
+  background-color: rgba(0, 0, 0, 0.3);
+}
+
+.navbar-transparent .navbar-brand:hover,
+.navbar-transparent .navbar-brand:active,
+.navbar-transparent .navbar-brand:focus {
+  color: white;
+}
+*/
 
 /************************************************/
 /**********     HOME CONTENT      *********/
@@ -214,6 +269,7 @@ header a:hover{
 .jumbotron {
   width: 450px;
   background-color: rgba(240,240,240,0.7);
+  margin-top: 0;
   float: right;
   padding-bottom: 30px;
 }
@@ -226,8 +282,12 @@ header a:hover{
   color: #FDEB2A;
 }
 
+.img-circle {
+  border: 1px solid black;
+}
+
 #accueil {
-  height: 500px;
+  height: 600px;
   background-size: cover;
   background: url("http://lorempixel.com/g/1600/600/food");
   background-position: center;
@@ -270,4 +330,9 @@ aside {
 
 footer {
   clear: both;
+  margin-bottom: 0;
+  color: white;
+  text-align: center;
+  background-color: black;
+  z-index: 2;
 }
